--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">Prom</string>
+    <string name="app_name">TestApp</string>
+
+    <string name="facebook_app_id">810041929050701</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
